# ProgalapTG

./: .gitignore  CMakeLists.txt  Makefile  README.md  make.sh  run.sh  teszt.txt
libsakk/: CMakeLists.txt  Makefile  sakk.c  sakk.h  sakk_BACKUP_1938.c  sakk_BASE_1938.c  sakk_LOCAL_1938.c  sakk_REMOTE_1938.c  utest-sakk.c  utest-sakk.h  utest.c
main/: CMakeLists.txt  Makefile  main.c  play-sakk.c
